--- a/UIPresentation/LoginViewController.storyboard
+++ b/UIPresentation/LoginViewController.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="7Bf-hJ-Div">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="f7o-WI-InW">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,22 +10,117 @@
     </dependencies>
     <scenes>
         <!--Login View Controller-->
-        <scene sceneID="A9l-bc-Pkz">
+        <scene sceneID="3gz-V2-Py4">
             <objects>
-                <viewController id="7Bf-hJ-Div" customClass="LoginViewController" customModule="UIPresentation" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="f7o-WI-InW" customClass="LoginViewController" customModule="UIPresentation" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="gl7-Sr-C4Q"/>
-                        <viewControllerLayoutGuide type="bottom" id="YRc-FB-N9c"/>
+                        <viewControllerLayoutGuide type="top" id="1t0-oq-xlV"/>
+                        <viewControllerLayoutGuide type="bottom" id="Q8T-ia-IaF"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="QAO-ba-ak1">
+                    <view key="view" contentMode="scaleToFill" id="Cwj-OM-J73">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" keyboardDismissMode="onDrag" translatesAutoresizingMaskIntoConstraints="NO" id="rQ9-ki-SeC" customClass="KeyboardAwareScrollView" customModule="UIComponents">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xr9-u5-U7g">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
+                                        <subviews>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="AFm-9c-d6R">
+                                                <rect key="frame" x="138" y="70" width="100" height="100"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="100" id="RLU-tF-twr"/>
+                                                    <constraint firstAttribute="height" constant="100" id="kS0-KG-dAY"/>
+                                                </constraints>
+                                            </imageView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y96-5n-0Vq" customClass="TitleLabel" customModule="UIComponents">
+                                                <rect key="frame" x="40" y="243" width="295" height="21"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bMr-fg-gMz" customClass="EmailInput" customModule="UIComponents">
+                                                <rect key="frame" x="40" y="284" width="295" height="50"/>
+                                                <color key="backgroundColor" red="0.95113812509999995" green="0.95113812509999995" blue="0.95113812509999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="50" id="8In-XK-gG5"/>
+                                                </constraints>
+                                            </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sVR-lF-rM5" customClass="PasswordInput" customModule="UIComponents">
+                                                <rect key="frame" x="40" y="354" width="295" height="50"/>
+                                                <color key="backgroundColor" red="0.95113812509999995" green="0.95113812509999995" blue="0.95113812509999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="50" id="HAp-S0-cKG"/>
+                                                </constraints>
+                                            </view>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hrJ-tJ-Gqd" customClass="PrimaryButton" customModule="UIComponents">
+                                                <rect key="frame" x="40" y="464" width="295" height="50"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="50" id="CNr-cE-fZn"/>
+                                                </constraints>
+                                                <state key="normal" title="Sign in"/>
+                                            </button>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Don't have account?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0IP-GO-Qvf" customClass="SmallLabel" customModule="UIComponents">
+                                                <rect key="frame" x="40" y="590" width="295" height="21"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" horizontalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0XX-59-FGk" customClass="SmallButton" customModule="UIComponents">
+                                                <rect key="frame" x="162" y="609" width="52" height="30"/>
+                                                <state key="normal" title="Sign up"/>
+                                            </button>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstItem="0XX-59-FGk" firstAttribute="centerX" secondItem="0IP-GO-Qvf" secondAttribute="centerX" id="1DV-Jh-Hd5"/>
+                                            <constraint firstItem="sVR-lF-rM5" firstAttribute="leading" secondItem="xr9-u5-U7g" secondAttribute="leading" constant="40" id="39g-xm-Sjf"/>
+                                            <constraint firstAttribute="bottom" secondItem="0XX-59-FGk" secondAttribute="bottom" constant="8" id="DBW-dP-ssj"/>
+                                            <constraint firstItem="0XX-59-FGk" firstAttribute="top" secondItem="0IP-GO-Qvf" secondAttribute="bottom" constant="-2" id="GEa-8P-sIO"/>
+                                            <constraint firstAttribute="trailing" secondItem="0IP-GO-Qvf" secondAttribute="trailing" constant="40" id="KLf-Cq-ufg"/>
+                                            <constraint firstItem="AFm-9c-d6R" firstAttribute="top" secondItem="xr9-u5-U7g" secondAttribute="top" constant="70" id="Kbc-hC-2YQ"/>
+                                            <constraint firstItem="0IP-GO-Qvf" firstAttribute="leading" secondItem="xr9-u5-U7g" secondAttribute="leading" constant="40" id="Mzw-vr-Vgf"/>
+                                            <constraint firstAttribute="trailing" secondItem="y96-5n-0Vq" secondAttribute="trailing" constant="40" id="PtT-0o-Nbs"/>
+                                            <constraint firstItem="y96-5n-0Vq" firstAttribute="centerX" secondItem="AFm-9c-d6R" secondAttribute="centerX" id="SwP-sp-F9h"/>
+                                            <constraint firstAttribute="trailing" secondItem="sVR-lF-rM5" secondAttribute="trailing" constant="40" id="UfY-82-bLB"/>
+                                            <constraint firstItem="sVR-lF-rM5" firstAttribute="top" secondItem="bMr-fg-gMz" secondAttribute="bottom" constant="20" id="WKb-Px-0xy"/>
+                                            <constraint firstItem="bMr-fg-gMz" firstAttribute="top" secondItem="y96-5n-0Vq" secondAttribute="bottom" constant="20" id="d89-ML-cDP"/>
+                                            <constraint firstAttribute="trailing" secondItem="bMr-fg-gMz" secondAttribute="trailing" constant="40" id="drC-Lt-f6R"/>
+                                            <constraint firstItem="bMr-fg-gMz" firstAttribute="leading" secondItem="xr9-u5-U7g" secondAttribute="leading" constant="40" id="eSQ-Kp-ItM"/>
+                                            <constraint firstItem="hrJ-tJ-Gqd" firstAttribute="top" secondItem="sVR-lF-rM5" secondAttribute="bottom" constant="60" id="mcy-WU-qfn"/>
+                                            <constraint firstAttribute="trailing" secondItem="hrJ-tJ-Gqd" secondAttribute="trailing" constant="40" id="mtA-GG-lNo"/>
+                                            <constraint firstItem="hrJ-tJ-Gqd" firstAttribute="leading" secondItem="xr9-u5-U7g" secondAttribute="leading" constant="40" id="r0s-Oy-pQp"/>
+                                            <constraint firstItem="y96-5n-0Vq" firstAttribute="leading" secondItem="xr9-u5-U7g" secondAttribute="leading" constant="40" id="t17-9l-rtm"/>
+                                            <constraint firstItem="y96-5n-0Vq" firstAttribute="top" secondItem="AFm-9c-d6R" secondAttribute="bottom" constant="73" id="tVG-Kw-wx6"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="xr9-u5-U7g" secondAttribute="trailing" id="Lbj-qg-Mix"/>
+                                    <constraint firstItem="xr9-u5-U7g" firstAttribute="leading" secondItem="rQ9-ki-SeC" secondAttribute="leading" id="NBU-5J-YMR"/>
+                                    <constraint firstItem="xr9-u5-U7g" firstAttribute="height" secondItem="rQ9-ki-SeC" secondAttribute="height" id="X7x-XY-X7a"/>
+                                    <constraint firstItem="xr9-u5-U7g" firstAttribute="top" secondItem="rQ9-ki-SeC" secondAttribute="top" id="fcM-JO-oOi"/>
+                                    <constraint firstAttribute="bottom" secondItem="xr9-u5-U7g" secondAttribute="bottom" id="zfL-dw-OE4"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="rQ9-ki-SeC" secondAttribute="trailing" id="5Xx-bv-sgS"/>
+                            <constraint firstItem="rQ9-ki-SeC" firstAttribute="leading" secondItem="Cwj-OM-J73" secondAttribute="leading" id="EH4-3i-1b3"/>
+                            <constraint firstItem="Q8T-ia-IaF" firstAttribute="top" secondItem="rQ9-ki-SeC" secondAttribute="bottom" id="NqF-bT-ien"/>
+                            <constraint firstItem="rQ9-ki-SeC" firstAttribute="top" secondItem="1t0-oq-xlV" secondAttribute="bottom" id="dgm-ed-a8g"/>
+                            <constraint firstItem="xr9-u5-U7g" firstAttribute="width" secondItem="Cwj-OM-J73" secondAttribute="width" id="iML-WB-d15"/>
+                        </constraints>
                     </view>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Vl9-SQ-Ato" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aSI-gB-Oa1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-68" y="194"/>
+            <point key="canvasLocation" x="-68" y="193.85307346326837"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="logo" width="160" height="160"/>
+    </resources>
 </document>
