Step 4: Add styling

--- a/UIComponents/PasswordInput.xib
+++ b/UIComponents/PasswordInput.xib
@@ -20,7 +20,7 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YAx-r4-qsh">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YAx-r4-qsh" customClass="BackgroundView" customModule="UIComponents" customModuleProvider="target">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
                     <subviews>
                         <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Brx-2O-fOn">
